--- a/app/src/main/res/layout/activity_admin_sign_in.xml
+++ b/app/src/main/res/layout/activity_admin_sign_in.xml
@@ -16,8 +16,8 @@
         tools:ignore="UselessParent">
 
         <ImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="97dp"
+            android:layout_height="92dp"
             android:layout_gravity="center_horizontal"
             android:layout_margin="10dp"
             android:src="@drawable/adminlogo" />
@@ -34,7 +34,7 @@
             app:hintTextColor="@android:color/white">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/restaurant_user_phone"
+                android:id="@+id/admin_user_phone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="phone"
@@ -47,7 +47,7 @@
 
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/til_restaurant_user_password"
+            android:id="@+id/til_admin_user_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="4dp"
@@ -58,7 +58,7 @@
             app:hintTextColor="@android:color/white">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/restaurant_user_password"
+                android:id="@+id/admin_user_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="password"
@@ -70,7 +70,7 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn_restaurant_user_Sign_in"
+            android:id="@+id/btn_admin_user_Sign_in"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
